# vantage-mcp

./: CLAUDE.md  Cargo.toml  Makefile  PRD-desktop-capture-mcp.md  README.md
crates/agent/: Cargo.toml  README.md
crates/agent/src/: agent.rs  config.rs  deepseek.rs  lib.rs  main.rs  mcp.rs
crates/agent/tests/: mcp_live.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: error_map.rs  handler.rs  image_out.rs  logging.rs  main.rs  stub_backends.rs
crates/mcp-server/tests/: boot.rs
crates/platform/linux/: Cargo.toml
crates/platform/linux/src/: atspi_conn.rs  capture.rs  capture_stub.rs  clipboard.rs  input.rs  lib.rs  ocr.rs  ocr_stub.rs  windows.rs
crates/platform/linux/tests/: capture_live.rs  capture_window_live.rs  clipboard_live.rs  displays_live.rs  input_live.rs  ocr_live.rs  windows_live.rs
crates/platform/macos/: Cargo.toml
crates/platform/macos/src/: capture.rs  clipboard.rs  input.rs  lib.rs  ocr.rs  windows.rs
crates/platform/macos/tests/: capture_live.rs  clipboard_live.rs  ocr_live.rs  windows_live.rs
docs/: agent-registration.md
docs/superpowers/plans/: 2026-07-08-vantage-mcp-linux-read-slice.md  2026-07-08-vantage-mcp-phase0-1-macos.md  2026-07-09-vantage-agent-deepseek.md  2026-07-09-vantage-mcp-act-tools-complete.md  2026-07-09-vantage-mcp-act-tools.md  2026-07-09-vantage-mcp-richer-capture.md
docs/superpowers/specs/: 2026-07-08-vantage-mcp-linux-read-slice-design.md  2026-07-08-vantage-mcp-phase0-1-macos-design.md  2026-07-09-vantage-agent-deepseek-design.md  2026-07-09-vantage-mcp-act-tools-complete-design.md  2026-07-09-vantage-mcp-act-tools-design.md  2026-07-09-vantage-mcp-richer-capture-design.md
