[workspace]
resolver = "2"
members = ["crates/core", "crates/platform/macos", "crates/platform/linux", "crates/mcp-server"]

[workspace.package]
edition = "2021"
rust-version = "1.95"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.25"
base64 = "0.22"
