[package]
name = "vantage-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "vantage_agent"
path = "src/lib.rs"

[[bin]]
name = "vantage-agent"
path = "src/main.rs"

[dependencies]
rmcp = { version = "2.1.0", features = ["client", "transport-child-process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-std"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustyline = "14"
