[package]
name = "vantage-mcp-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "vantage-mcp"
path = "src/main.rs"

[dependencies]
vantage-core = { path = "../core" }
rmcp = { version = "2.1.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
vantage-platform-macos = { path = "../platform/macos" }

[target.'cfg(target_os = "linux")'.dependencies]
vantage-platform-linux = { path = "../platform/linux" }
