[package]
name = "vantage-platform-linux"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
vantage-core = { path = "../../core" }

# Real backend deps are added per-capability in Tasks 2-6 under:
# [target.'cfg(target_os = "linux")'.dependencies]
