[package]
name = "vantage-platform-macos"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
vantage-core = { path = "../../core" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSDictionary"] }
objc2-core-foundation = { version = "0.3", features = ["CFData", "CFCGTypes"] }
objc2-core-graphics = { version = "0.3", features = ["CGImage", "CGColorSpace", "CGDataProvider"] }
objc2-vision = { version = "0.3", features = [
    "VNRequest",
    "VNObservation",
    "VNRequestHandler",
    "objc2-core-graphics",
    "objc2-core-foundation",
] }
accessibility = "0.2"
accessibility-sys = "0.2"
xcap = "0.9"
image = { workspace = true }
arboard = "3"
